sq-ch12-ex2/sq-ch12-ex2/target/classes/META-INF/jkube/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      jkube.io/git-branch: master
      jkube.io/git-commit: bdcbe44875a86d9ef8e72151f7568fd1f31c4e69
      jkube.io/scm-url: https://github.com/spring-projects/spring-boot/example-canary-v2
      jkube.io/scm-tag: HEAD
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      expose: "true"
      app: example-canary-v2
      provider: jkube
      version: 0.0.1-SNAPSHOT
      group: com.example
    name: example-canary-v2
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: example-canary-v2
      provider: jkube
      group: com.example
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      jkube.io/git-branch: master
      jkube.io/git-commit: bdcbe44875a86d9ef8e72151f7568fd1f31c4e69
      jkube.io/scm-url: https://github.com/spring-projects/spring-boot/example-canary-v2
      jkube.io/scm-tag: HEAD
    labels:
      app: example-canary-v2
      provider: jkube
      version: 0.0.1-SNAPSHOT
      group: com.example
    name: example-canary-v2
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: example-canary-v2
      provider: jkube
      group: com.example
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          jkube.io/scm-url: https://github.com/spring-projects/spring-boot/example-canary-v2
          jkube.io/scm-tag: HEAD
          jkube.io/git-commit: bdcbe44875a86d9ef8e72151f7568fd1f31c4e69
          jkube.io/git-branch: master
        labels:
          app: example-canary-v2
          provider: jkube
          version: 0.0.1-SNAPSHOT
          group: com.example
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: example-canary-v2:latest
          imagePullPolicy: IfNotPresent
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot
        from:
          kind: ImageStreamTag
          name: example-canary-v2:latest
      type: ImageChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      jkube.io/git-branch: master
      jkube.io/git-commit: bdcbe44875a86d9ef8e72151f7568fd1f31c4e69
      jkube.io/scm-url: https://github.com/spring-projects/spring-boot/example-canary-v2
      jkube.io/scm-tag: HEAD
    labels:
      expose: "true"
      app: example-canary-v2
      provider: jkube
      version: 0.0.1-SNAPSHOT
      group: com.example
    name: example-canary-v2
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: example-canary-v2
